# embedded_first_aid_kit

./: .cproject  CMakeLists.txt  sdkconfig
components/DFRobotDFPlayerMini/: serial.c  serial.h
main/: CMakeLists.txt  gpio.c  gpio.h  http_server.c  http_server.h  main.c  pn532.c  pn532.h  rc.c  rc.h  sensors.c  sensors.h  tasks_settings.h  wifi.c  wifi.h  xbee.c  xbee.h
main/webpage/: Index.html  register.html
